--- a/btap7-12/btap7-12.csproj
+++ b/btap7-12/btap7-12.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="NewFolder1\Lecture.cs" />
     <Compile Include="NewFolder1\Student.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
